# ChangeLog for app-arch/star
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/star/ChangeLog,v 1.78 2008/05/20 18:42:45 corsair Exp $

  20 May 2008; Markus Rothe <corsair@gentoo.org> star-1.5.ebuild:
  Stable on ppc64; bug #222789

  20 May 2008; Raúl Porcel <armin76@gentoo.org> star-1.5.ebuild:
  alpha/ia64 stable wrt #222789

  20 May 2008; Ferris McCormick <fmccor@gentoo.org> star-1.5.ebuild:
  Sparc stable --- Bug #222789 --- it can read, extract, and create .tar files.

  20 May 2008; Dawid Węgliński <cla@gentoo.org> star-1.5.ebuild:
  Stable on x86 (bug #222789)

  20 May 2008; Jeroen Roovers <jer@gentoo.org> star-1.5.ebuild:
  Stable for HPPA (bug #222789).

  19 May 2008; nixnut <nixnut@gentoo.org> star-1.5.ebuild:
  Stable on ppc wrt bug 222789

  06 May 2008; Peter Volkov <pva@gentoo.org> star-1.5_alpha88.ebuild:
  amd64 stable, bug #216658. Thank Víctor Enríquez for tests.

*star-1.5 (18 Apr 2008)

  18 Apr 2008; Peter Volkov <pva@gentoo.org> +star-1.5.ebuild:
  Version bump. Finally stable release!

  09 Apr 2008; nixnut <nixnut@gentoo.org> star-1.5_alpha88.ebuild:
  Stable on ppc wrt bug #216658

  08 Apr 2008; Raúl Porcel <armin76@gentoo.org> star-1.5_alpha88.ebuild:
  ia64/sparc/x86 stable wrt #216658

  08 Apr 2008; Jeroen Roovers <jer@gentoo.org> star-1.5_alpha88.ebuild:
  Stable for HPPA (bug #216658).

  07 Apr 2008; Tobias Klausmann <klausman@gentoo.org>
  star-1.5_alpha88.ebuild:
  Stable on alpha, bug #216658

  07 Apr 2008; Markus Rothe <corsair@gentoo.org> star-1.5_alpha88.ebuild:
  Stable on ppc64; bug #216658

*star-1.5_alpha89 (20 Mar 2008)

  20 Mar 2008; Peter Volkov <pva@gentoo.org> +star-1.5_alpha89.ebuild:
  Version bump.

*star-1.5_alpha88 (04 Mar 2008)

  04 Mar 2008; <pva@gentoo.org> +star-1.5_alpha88.ebuild:
  Version bump.

  21 Feb 2008; Raúl Porcel <armin76@gentoo.org>