@@ -1,10 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST star-1.5.tar.bz2 783704 RMD160 88889ca5d0d7fd99094e614c08fc59f85ea50134 SHA1 83f00d740b3feeafc741dfde5287cc319cfd6b9a SHA256 6dbb345d75c88d70ebdea04b13b80d7f3e9cf5d29316d803a355afd03df2723f
 DIST star-1.5a87.tar.bz2 821760 RMD160 67844a36ffe29776d29d44699bbcde87636b168e SHA1 5f6cb97f075f7b44cdd8dd8b86ca1f5b1940c2ff SHA256 2b40fd819aa822a3f7ba19d8e6ebf43db7651d9ddf6d7d64c4de976b1523c91e
 DIST star-1.5a88.tar.bz2 818607 RMD160 7fae3ad20cb8bb5e52f1946c0d6426af96e63c74 SHA1 835a97232f476a7ee487ae7095ce0358959baab3 SHA256 60c01a1b246ce3b1083c98a78269ab0bd3e1bc12c2b54f0fa90a716c36be93da
 DIST star-1.5a89.tar.bz2 817991 RMD160 a8589b6c6fd0ea8a9f3074e08a0ea68072434e01 SHA1 03fa2f7cdc1890f11c6b83a1806a92a9599ddcde SHA256 997f101243684d4df6f469441ef89b44bd677c302bd5c1480572b799ab2e7972
-EBUILD star-1.5.ebuild 2521 RMD160 58b1685f641f44af72691e1a301a7062549c066e SHA1 0ea57fa0808fbe74eb771453b6ad0b30cdd6b708 SHA256 da9f6c571e93a9f86307e4dfceb881acb6ee5f78cc0335ca6a556bb2e25473cc
+EBUILD star-1.5.ebuild 2387 RMD160 f58a7260cd096d92d8ed418fe78d1289e5cb040d SHA1 ab98cd651a1c426a9b4590a564fbddedc6ebd3b5 SHA256 ef69c7aaebcd1ccd686dbca97e01abaf8e720777f1dad2947f5d28e474ebe2a7
 EBUILD star-1.5_alpha87.ebuild 2424 RMD160 c63246e5ce823c21f8b1221255c5fc9b11c59b03 SHA1 e29efaa9e6efc14fb66863410b175befcfdc4279 SHA256 da047730c2d8f37da23c3a6c97f645a101bd17be445b3e046b315c427d8eb436
 EBUILD star-1.5_alpha88.ebuild 2423 RMD160 faed8ec67c6c9ed237325bb2c481db202481a79b SHA1 b631fee150d172b74949153435f790e2336213a6 SHA256 8797daf13225a7cf4f9189a9743e38a77786bbc39d8d9aacd76854c6d12950c1
 EBUILD star-1.5_alpha89.ebuild 2431 RMD160 7e46f1effe5d25eec8785840a5282384f8b79244 SHA1 078b0184e3e43234adb4739d045261fdbb044c12 SHA256 5c25c27d7b2adfdea852fb82b70085d2f7049c27425a68eb09bf19e3d72e1cf0
-MISC ChangeLog 11866 RMD160 7cf4f25518bc832c46827bb219198c930a539dd0 SHA1 e4cd2e835af75edbdc479058537bd2e958affb73 SHA256 847aa07ddb3d452a42ec1152c4926a2d564dee04bdb40d233a80254cf6280287
+MISC ChangeLog 12002 RMD160 3aa763119bd9065ef3113401ec299480bcae3daa SHA1 c01f0dca51690acc1e8207d4e5bb8bbeb1a0f6c4 SHA256 52f1b76ff4fc940a16a5ac8c21e5bb81056a17358a899b590e49b17fca302119
 MISC metadata.xml 165 RMD160 c4557a3518a065b077539be5a0f20e4735fc2141 SHA1 1831705b1eb97b63968fc9eef31aa904a69a854a SHA256 75ca85c472d4181ae0de529c83826baaebe75d9e750ee6621758b5096bceffcd
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkg4GJEACgkQkKaRLQcq0GJcCACgqrW2EG4Sr1doVRnXthexOHFA
+uroAniEXL+/yRv8oZdtT+G7q9cafWMTn
+=NQhX
+-----END PGP SIGNATURE-----
