@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/star
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/star/ChangeLog,v 1.78 2008/05/20 18:42:45 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/star/ChangeLog,v 1.79 2008/05/24 13:30:02 maekke Exp $
+
+  24 May 2008; Markus Meier <maekke@gentoo.org> star-1.5.ebuild:
+  remove unneded cp for amd64 in src_unpack. amd64 stable, bug #222789
 
   20 May 2008; Markus Rothe <corsair@gentoo.org> star-1.5.ebuild:
   Stable on ppc64; bug #222789
